First try at a new scaffolding mechanism

--- a/test/index.html
+++ b/test/index.html
@@ -9,8 +9,7 @@
   <script src="vendor/lodash.js"></script>
 
   <!-- contrib libraries -->
-  <script src="../_.array.builders.js"></script>
-  <script src="../_.array.selectors.js"></script>
+  <script src="../gen/browserified.js"></script>
   <script src="../_.collections.walk.js"></script>
   <script src="../_.function.arity.js"></script>
   <script src="../_.function.combinators.js"></script>
