reworked into CommonJS primary -> browserify for browsers

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>lodash-contrib Test Suite</title>
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
   <script src="vendor/jquery.js"></script>
@@ -10,19 +10,7 @@
   <script src="vendor/lodash.js"></script>
 
   <!-- contrib libraries -->
-  <script src="../gen/browserified.js"></script>
-  <script src="../_.collections.walk.js"></script>
-  <script src="../_.function.arity.js"></script>
-  <script src="../_.function.combinators.js"></script>
-  <script src="../_.function.dispatch.js"></script>
-  <script src="../_.function.predicates.js"></script>
-  <script src="../_.function.iterators.js"></script>
-  <script src="../_.object.builders.js"></script>
-  <script src="../_.object.selectors.js"></script>
-  <script src="../_.util.existential.js"></script>
-  <script src="../_.util.trampolines.js"></script>
-  <script src="../_.util.operators.js"></script>
-  <script src="../_.util.strings.js"></script>
+  <script src="../gen/lodash-contrib.js"></script>
 
   <!-- contrib tests -->
   <script src="array.builders.js"></script>
