--- a/test/browserified.html
+++ b/test/browserified.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>lodash-contrib Test Suite</title>
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
   <script src="vendor/jquery.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="vendor/jslitmus.js"></script>
+  <script src="vendor/lodash.js"></script>
 
   <!-- contrib libraries -->
   <script src="../gen/double.browserified.js"></script>
