--- a/test/dist-min.html
+++ b/test/dist-min.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>lodash-contrib Test Suite</title>
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
   <script src="vendor/jquery.js"></script>
@@ -10,7 +10,7 @@
   <script src="vendor/lodash.js"></script>
 
   <!-- contrib libraries -->
-  <script src="../dist/lodash-contrib.min.js"></script>
+  <script src="../gen/lodash-contrib.min.js"></script>
 
   <!-- contrib tests -->
   <script src="array.builders.js"></script>
