--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
   <script src="collections.walk.js"></script>
   <script src="function.arity.js"></script>
   <script src="function.combinators.js"></script>
+  <script src="function.permutators.js"></script>
   <script src="function.dispatch.js"></script>
   <script src="function.predicates.js"></script>
   <script src="function.iterators.js"></script>
